# text_image_multi_modal_vlm

./: .gitignore  Makefile  README.md  paligemma.py  pyproject.toml  qwen_vlm.py  requirements.txt  smol_vlm.py
configs/: paligemma.yaml  qwen2vl.yaml  smolvlm.yaml
docs/: architecture.md
runs/paligemma_lora/: README.md  test_metrics.json  val_metrics.json
runs/paligemma_lora/checkpoint-8000/: trainer_state.json
runs/paligemma_lora/checkpoint-8427/: trainer_state.json
runs/paligemma_lora/logs/: events.out.tfevents.1759695523.9e811977deed.62729.0  events.out.tfevents.1759709139.9e811977deed.62729.1
runs/paligemma_lora/lora_adapter/: adapter_config.json
runs/qwen2vl_lora/: adapter_config.json  label_map.json  test_metrics.json  training_logs  val_metrics.json
runs/qwen2vl_lora/checkpoint-16853/: trainer_state.json
runs/qwen2vl_lora/checkpoint-8000/: trainer_state.json
runs/qwen2vl_lora/logs/: events.out.tfevents.1759689649.MSI.30504.0  events.out.tfevents.1759742246.MSI.30504.1
scripts/: prepare_data.py  train.py
scripts/sagemaker/: inference.py  train_entrypoint.py
src/text_image_multi_modal_vlm/: paligemma.py  qwen_vlm.py  sagemaker.py  smol_vlm.py
tests/: test_imports.py
